--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gradient-to-r from-blue-500 to-sky-500 min-h-screen flex items-center justify-center">
     <div class="bg-white p-8 rounded shadow-lg max-w-md w-full">
-        <h1 class="text-2xl font-bold mb-6 text-center">VidSizeCalc</h1>
+        <h1 class="text-2xl font-bold mb-6 text-center">VidSizeCalc h.264 vs h.265</h1>
         <form id="calcForm" class="space-y-4">
             <div>
                 <label for="durationHours" class="block text-sm font-medium text-gray-700">Duration (Hours)</label>
